--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
     "openai": "^4.72.0",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "rehype-prism-plus": "^2.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
