--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
     "openai": "^4.72.0",
-    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "rehype-prism-plus": "^2.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
@@ -34,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
